continue on twitter import

--- a/src/main/webapp/delight/delight_analysis_tool.xhtml
+++ b/src/main/webapp/delight/delight_analysis_tool.xhtml
@@ -70,7 +70,7 @@
                     <p:button value="#{text['general.message.text_in_bulk']}" icon="pi pi-file-pdf" iconPos="right" outcome="/import_your_data_bulk_text.xhtml?function=satisfaction&amp;faces-redirect=true" styleClass="btn btn-primary" style="min-width: 15em;"/>
                     <br/>
                     <br/>
-                    or
+                    #{text['general.small_words.or']}
                     <br/>
                     <br/>
                     <p:button value="#{text['general.message.text_structured']}" icon="pi pi-file-excel" iconPos="right" outcome="/import_your_structured_data.xhtml?function=satisfaction&amp;faces-redirect=true" styleClass="btn btn-primary" style="min-width: 15em;"/>
