in the middle of upgrading to javaee 10, JSF 3

--- a/src/main/webapp/WEB-INF/error-pages/expired.xhtml
+++ b/src/main/webapp/WEB-INF/error-pages/expired.xhtml
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <title>Session expired</title>
-        <meta http-equiv="refresh"
-              content="0;url=#{request.contextPath}/index.xhtml"/>
+        <meta http-equiv="refresh" content="0;url=#{request.contextPath}/index.xhtml"/>
     </head>
     <body>
         <h1>Sorry, your session has timed out</h1>
