--- a/src/main/webapp/link_prediction/link_prediction.xhtml
+++ b/src/main/webapp/link_prediction/link_prediction.xhtml
@@ -117,7 +117,7 @@
                 <div>
                     <p:spacer height="20" width="10"/>            
                 </div>
-                <p:panel id = "buttonConvertToGexf">
+                <p:panel id = "launch_predictions">
                     <h:graphicImage name="images/round_2_orange.png" width="20" height="20" style="vertical-align: middle;"/>
                     <p:spacer width="5"/>
                     <p:commandButton value="#{text['link_prediction.predict_new_links']}" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"
